# epmltc

./: .env  README.md  openssl_legacy.cnf  pyproject.toml
.streamlit/: config.toml
backend/: database.py  main.py
backend/ml_models/: modelo_grupo.pkl  modelo_subgrupo.pkl
backend/routers/: finance.py  opex.py
etl/: etl_consolidado.py  openssl_legacy.cnf
frontend/: app.py
frontend/pages/: 1_📊_Dashboard_Opex.py  2_🔍_Explorador_Datos.py  3_🤖_Clasificador_IA.py  4_📈_Proyeccion_Financiera.py
frontend/utils/: enterprise_style.py  financial_logic.py  styles.py
frontend/views/: classifier.py  dashboard.py  data_manager.py  explorer.py  projection.py
ml/: run_full_classification.py  train_model.py
